force-app/main/default/objects/Participant__c/Participant__c.object-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomObject>
    <label>Participant</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>