force-app/main/default/objects/Participant__c/fields/Age__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Age__c</fullName>
    <formula>(TODAY() - Date_Of_Birth__c) / 365.2425</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>