force-app/main/default/objects/Participant__c/fields/Any_Health_Condition__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Any_Health_Condition__c</fullName>
    <description>任何健康狀況
Condiciones</description>
    <inlineHelpText>/任何健康狀況/Condiciones</inlineHelpText>
    <label>Any Health Condition?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>