force-app/main/default/objects/Participant__c/fields/Consent_to_be_photographed__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Consent_to_be_photographed__c</fullName>
    <description>Consented to be photographed/interviewed/videotaped.</description>
    <label>Consent to be photographed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No consent</fullName>
                <default>true</default>
                <label>No consent</label>
            </value>
            <value>
                <fullName>Consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>