force-app/main/default/objects/Participant__c/fields/Date_Of_Birth__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <inlineHelpText>出生日期
Fecha de nacimiento</inlineHelpText>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>