force-app/main/default/objects/Participant__c/fields/Email__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>電郵
Correo electrónico</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>