force-app/main/default/objects/Participant__c/fields/Emergency_Contact_Name__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <inlineHelpText>緊急聯繫人姓名
Nombre del contacto de emergencia</inlineHelpText>
    <label>Emergency Contact Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>