force-app/main/default/objects/Participant__c/fields/Enjoyable_Activities__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Enjoyable_Activities__c</fullName>
    <inlineHelpText>你喜歡什麼活動？
¿Qué actividades disfruta?</inlineHelpText>
    <label>What Activities do you enjoy ?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meditation</fullName>
            </value>
            <value>
                <fullName>Aerobic Class</fullName>
            </value>
            <value>
                <fullName>Dancing</fullName>
            </value>
            <value>
                <fullName>Yoga/Tai Chi/Stretch</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>