force-app/main/default/objects/Participant__c/fields/Exercise_Level__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Exercise_Level__c</fullName>
    <inlineHelpText>你多久鍛煉一次？
¿Con qué frecuencia hace ejercicio?</inlineHelpText>
    <label>How often do you exercise?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I do not exercise</fullName>
            </value>
            <value>
                <fullName>1-2 times/week</fullName>
            </value>
            <value>
                <fullName>3-4 times/week</fullName>
            </value>
            <value>
                <fullName>5-7 times/week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>