force-app/main/default/objects/Participant__c/fields/Existing_Health_Conditions__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Existing_Health_Conditions__c</fullName>
    <inlineHelpText>你是否有？
¿Tiene usted...?</inlineHelpText>
    <label>Do you have ?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High blood pressure</fullName>
            </value>
            <value>
                <fullName>High cholesterol</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Anxiety or Depression</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>