force-app/main/default/objects/Participant__c/fields/Gender__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Gender__c</fullName>
    <inlineHelpText>性別
Sexo</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prefer not to say</fullName>
                <default>true</default>
                <label>Prefer not to say</label>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Transgender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>