force-app/main/default/objects/Participant__c/fields/Health_Condition_Improve__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Health_Condition_Improve__c</fullName>
    <description>What would you like to change/improve by coming to the Community Wellness Program?</description>
    <inlineHelpText>你想改善什麼？
¿Qué le gustaría mejorar?</inlineHelpText>
    <label>What would like to improve</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>