force-app/main/default/objects/Participant__c/fields/How_would_you_like_CWP_to_help__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>How_would_you_like_CWP_to_help__c</fullName>
    <description>How would you like CWP to help you make changes/improvements?</description>
    <label>How would you like CWP to help?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nutrition Classes</fullName>
            </value>
            <value>
                <fullName>Movement Classes</fullName>
            </value>
            <value>
                <fullName>Support Groups</fullName>
            </value>
            <value>
                <fullName>Resources</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>