force-app/main/default/objects/Participant__c/fields/Instructor__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Instructor__c</fullName>
    <label>Instructor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Not instructor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>