force-app/main/default/objects/Participant__c/fields/Medical_Number__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Medical_Number__c</fullName>
    <description>Participant Medical Record Number</description>
    <inlineHelpText>If available, please enter your Medical Record number</inlineHelpText>
    <label>Medical Record Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>