force-app/main/default/objects/Participant__c/fields/No_money_for_Food__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>No_money_for_Food__c</fullName>
    <description>This field is for survey question: Within the past 12 months, the food we bought just didn't last and we didn't have money to buy more.</description>
    <label>No money for Food</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Often</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>