force-app/main/default/objects/Participant__c/fields/Other_health_wellness_goals_issues_needs__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Other_health_wellness_goals_issues_needs__c</fullName>
    <description>What other health or wellness issues/needs/goals do you have?</description>
    <label>Other health/wellness goals/issues/needs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>