force-app/main/default/objects/Participant__c/fields/Participant_Ext_Id__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Participant_Ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>Participant_Ext_Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>