force-app/main/default/objects/Participant__c/fields/Participant_Position__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Participant_Position__c</fullName>
    <inlineHelpText>我是
Yo soy</inlineHelpText>
    <label>I Am A</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>DPH employee working at SFGH</fullName>
            </value>
            <value>
                <fullName>UCSF employee working at SFGH</fullName>
            </value>
            <value>
                <fullName>Community Member/Patient</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>