force-app/main/default/objects/Participant__c/fields/Prefer_method_of_contact__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Prefer_method_of_contact__c</fullName>
    <label>Prefer method of contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Text message</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>