force-app/main/default/objects/Participant__c/fields/Race__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Race__c</fullName>
    <inlineHelpText>種族/族裔
Raza/ Etnia</inlineHelpText>
    <label>Race/Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prefer not to say</fullName>
                <default>true</default>
                <label>Prefer not to say</label>
            </value>
            <value>
                <fullName>African American/African</fullName>
            </value>
            <value>
                <fullName>Asian/Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Caucasian</fullName>
            </value>
            <value>
                <fullName>Latino/Chicano</fullName>
            </value>
            <value>
                <fullName>Native American</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>