force-app/main/default/objects/Participant__c/fields/Referral_Source__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Referral_Source__c</fullName>
    <inlineHelpText>你是怎麼知道ZSFG的？
¿Cómo supo acerca del hospital ZSFG?</inlineHelpText>
    <label>How did you hear about the Wellness Ctr</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provider</fullName>
                <default>true</default>
                <label>Provider (i.e. doctor)</label>
            </value>
            <value>
                <fullName>E-referral/Healthy Hearts</fullName>
            </value>
            <value>
                <fullName>Community member</fullName>
                <label>Staff/Community member</label>
            </value>
            <value>
                <fullName>Flyers</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>The Holler(Hospital Newsletter)</fullName>
            </value>
            <value>
                <fullName>Wellness Event(i.e. Summer Fest)</fullName>
                <label>Wellness Event (i.e. Summer Fest)</label>
            </value>
            <value>
                <fullName>Walked by the Center</fullName>
            </value>
            <value>
                <fullName>Support/Education Group</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other/Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>