force-app/main/default/objects/Participant__c/fields/Sign_Updated_Intake_Liability_Form__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Sign_Updated_Intake_Liability_Form__c</fullName>
    <label>Sign Updated Intake/Liability Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, Signed Updated form</fullName>
                <default>true</default>
                <label>Yes, Signed Updated form</label>
            </value>
            <value>
                <fullName>No, Missing Updated form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>