force-app/main/default/objects/Participant__c/fields/State__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>州
Estado</inlineHelpText>
    <label>State</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>