force-app/main/default/objects/Participant__c/validationRules/Full_Name.validationRule-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<ValidationRule>
    <fullName>Full_Name</fullName>
    <active>true</active>
    <description>Enter [First Name][space][Last Name][space][Middle Initial]</description>
    <errorConditionFormula>REGEX( Name , " " )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You must enter first name as well as last name.</errorMessage>
</ValidationRule>